# xGEMM

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  notes.md
inc/: StridedArray.h  linalg.h  strided_array.h  thread_pool.h
src/: CMakeLists.txt  Makefile  linalg.cpp  main  main.cpp  strided_array_test.cpp  thread_pool.cpp  thread_pool_test.cpp
